[gd_scene load_steps=15 format=3 uid="uid://cd0pikngn634d"]

[ext_resource type="Script" path="res://player/player.gd" id="2_5p1vf"]
[ext_resource type="Texture2D" uid="uid://by4fpjw3bu86u" path="res://art/art.png" id="2_yqpy3"]
[ext_resource type="Shader" path="res://art/visibility.gdshader" id="4_5nb7a"]
[ext_resource type="Texture2D" uid="uid://doh73k3acded4" path="res://art/player_light.png" id="4_g3ikr"]
[ext_resource type="Texture2D" uid="uid://c1hxnutbmq3bt" path="res://art/light.png" id="4_xqmo8"]
[ext_resource type="Script" path="res://knight/knight.gd" id="5_4oqxp"]
[ext_resource type="PackedScene" uid="uid://b542fa4myg1px" path="res://components/dir_cast.tscn" id="5_ic3ku"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_csmrl"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_685xr"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qrp8n"]
texture = ExtResource("2_yqpy3")
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_csmrl")
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0/terrains_peering_bit/bottom_side = 0
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0/terrains_peering_bit/bottom_side = 0
1:4/0/terrains_peering_bit/top_side = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0/terrains_peering_bit/top_side = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0/terrains_peering_bit/right_side = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0/terrains_peering_bit/right_side = 0
3:6/0/terrains_peering_bit/left_side = 0
4:6/0 = 0
4:6/0/terrain_set = 0
4:6/0/terrain = 0
4:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0/terrains_peering_bit/left_side = 0
4:5/0 = 0
4:5/0/terrain_set = 0
4:5/0/terrain = 0
4:5/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0/terrains_peering_bit/left_side = 0
4:5/0/terrains_peering_bit/top_side = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0/terrains_peering_bit/right_side = 0
3:5/0/terrains_peering_bit/left_side = 0
3:5/0/terrains_peering_bit/top_side = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0/terrains_peering_bit/right_side = 0
2:5/0/terrains_peering_bit/top_side = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0/terrains_peering_bit/right_side = 0
2:4/0/terrains_peering_bit/bottom_side = 0
2:4/0/terrains_peering_bit/top_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/bottom_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0/terrains_peering_bit/right_side = 0
3:3/0/terrains_peering_bit/bottom_side = 0
3:3/0/terrains_peering_bit/left_side = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0/terrains_peering_bit/bottom_side = 0
4:3/0/terrains_peering_bit/left_side = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/left_side = 0
4:4/0/terrains_peering_bit/top_side = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_685xr")
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0/terrains_peering_bit/right_side = 0
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/left_side = 0
3:4/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_dklej"]
occlusion_layer_0/light_mask = 5
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_qrp8n")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbqlq"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mo0gi"]
size = Vector2(8, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0r54h"]
shader = ExtResource("4_5nb7a")

[node name="Node2D" type="Node2D"]
texture_filter = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(4, 4)

[node name="TileMap" type="TileMap" parent="."]
light_mask = 7
z_index = -2
tile_set = SubResource("TileSet_dklej")
format = 2
layer_0/tile_data = PackedInt32Array(327685, 131073, 6, 327686, 196609, 6, 327687, 262145, 4, 393223, 131073, 4, 458757, 131073, 6, 458758, 196609, 6, 458759, 262145, 5, 262151, 65537, 4, 458756, 1, 3, 524292, 1, 3, 524293, 1, 3, 393224, 196609, 6, 196615, 65537, 4, 131079, 65537, 3, 393225, 262145, 5, 327689, 65537, 4, 262153, 65537, 4, 196617, 65537, 4, 131081, 65537, 3, 458762, 65537, 3, 524298, 65537, 4, 589834, 196609, 5, 589833, 196609, 6, 589832, 196609, 6, 589831, 196609, 6, 589830, 196609, 6, 589829, 196609, 6, 589828, 196609, 6, 589827, 196609, 6, 589826, 196609, 6, 589825, 196609, 6, 589824, 131073, 5, 524288, 65537, 4, 458752, 65537, 4, 393216, 65537, 4, 327680, 65537, 4, 262144, 65537, 4, 196608, 65537, 4, 131072, 65537, 4, 65536, 65537, 4, 0, 131073, 3, 1, 196609, 6, 2, 196609, 6, 3, 196609, 6, 4, 196609, 6, 5, 196609, 6, 6, 196609, 6, 7, 196609, 6, 8, 196609, 6, 9, 196609, 6, 10, 196609, 6, 11, 196609, 6, 12, 196609, 6, 13, 196609, 3, 14, 196609, 6, 15, 196609, 6, 16, 196609, 3, 589835, 196609, 6, 589836, 196609, 6, 589837, 196609, 6, 589838, 196609, 6, 589839, 196609, 6, 589840, 196609, 6, 589841, 262145, 4, 524305, 65537, 4, 458769, 65537, 4, 393233, 262145, 4, 327697, 65537, 4, 262161, 65537, 4, 196625, 262145, 4, 131089, 65537, 4, 65553, 262145, 4, 17, 262145, 3, 65552, 131073, 5, 262147, 262145, 5, 262146, 131073, 5, 196610, 131073, 3, 196611, 262145, 3, 393232, 196609, 6, 393231, 196609, 6, 393230, 196609, 6, 327693, 65537, 3, 393229, 131073, 5, 65549, 65537, 5, 196621, 131073, 6, 196622, 196609, 6, 196623, 196609, 6, 196624, 196609, 6, 524291, 1, 3, 524290, 1, 3, 524289, 1, 3, 458753, 1, 3, 393217, 1, 3, 327681, 1, 3, 262145, 1, 3, 196609, 1, 3, 131073, 1, 3, 65537, 1, 3, 65538, 1, 3, 65539, 1, 3, 65540, 1, 3, 65541, 1, 3, 65545, 1, 3, 65546, 1, 3, 65547, 1, 3, 65548, 1, 3, 131083, 1, 3, 131082, 1, 3, 196618, 1, 3, 262154, 1, 3, 262155, 1, 3, 327691, 1, 3, 327692, 1, 3, 393228, 1, 3, 262156, 1, 3, 196620, 1, 3, 196619, 1, 3, 327690, 1, 3, 393226, 1, 3, 393227, 1, 3, 458763, 1, 3, 327682, 1, 3, 393218, 1, 3, 458754, 1, 3, 458755, 1, 3, 393219, 1, 3, 131076, 1, 3, 131075, 1, 3, 131074, 1, 3, 196612, 1, 3, 196613, 1, 3, 131077, 1, 3, 131087, 1, 3, 65551, 1, 3, 65550, 1, 3, 131086, 1, 3, 131088, 1, 3, 327695, 1, 3, 262159, 1, 3, 262158, 1, 3, 262157, 1, 3, 327694, 1, 3, 262160, 1, 3, 327696, 1, 3, 327683, 1, 3, 327684, 1, 3, 262148, 1, 3, 262149, 1, 3, 262150, 1, 3, 196614, 1, 3, 131078, 1, 3, 65542, 1, 3, 65543, 1, 3, 65544, 1, 3, 131080, 1, 3, 196616, 1, 3, 262152, 1, 3, 327688, 1, 3, 393220, 1, 3, 393221, 1, 3, 393222, 1, 3, 458760, 1, 3, 524296, 1, 3, 524295, 1, 3, 524294, 1, 3, 524297, 1, 3, 458761, 1, 3, 524300, 1, 3, 458764, 1, 3, 458765, 1, 3, 524301, 1, 3, 524302, 1, 3, 458766, 1, 3, 458767, 1, 3, 524303, 1, 3, 524304, 1, 3, 458768, 1, 3, 524299, 1, 3, 131084, 1, 3, 131085, 1, 3)

[node name="Player" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(40, 104)
texture = ExtResource("2_yqpy3")
hframes = 16
vframes = 16
script = ExtResource("2_5p1vf")

[node name="PlayerArea" type="Area2D" parent="Player"]
visible = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerArea"]
shape = SubResource("RectangleShape2D_fbqlq")

[node name="DirCast" parent="Player" instance=ExtResource("5_ic3ku")]
visible = false
collision_mask = 2

[node name="VisibilityLight" type="PointLight2D" parent="Player"]
blend_mode = 2
shadow_enabled = true
shadow_filter_smooth = 4.0
texture = ExtResource("4_xqmo8")
texture_scale = 10.0

[node name="WorldShadow" type="PointLight2D" parent="Player"]
blend_mode = 2
range_item_cull_mask = 2
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.164706)
shadow_filter_smooth = 64.0
texture = ExtResource("4_xqmo8")
texture_scale = 10.0

[node name="GlowArea" type="Area2D" parent="Player"]
visible = false
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2DMiddle" type="CollisionShape2D" parent="Player/GlowArea"]
shape = SubResource("RectangleShape2D_mo0gi")

[node name="CollisionShape2DRight" type="CollisionShape2D" parent="Player/GlowArea"]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_mo0gi")

[node name="CollisionShape2DDown" type="CollisionShape2D" parent="Player/GlowArea"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_mo0gi")

[node name="CollisionShape2DLeft" type="CollisionShape2D" parent="Player/GlowArea"]
position = Vector2(-16, 0)
shape = SubResource("RectangleShape2D_mo0gi")

[node name="CollisionShape2DUp" type="CollisionShape2D" parent="Player/GlowArea"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_mo0gi")

[node name="PlayerGlow" type="PointLight2D" parent="Player"]
color = Color(0.909804, 0.529412, 0.235294, 1)
range_item_cull_mask = 4
shadow_enabled = true
shadow_filter_smooth = 64.0
shadow_item_cull_mask = 4
texture = ExtResource("4_g3ikr")

[node name="Knight" type="Sprite2D" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_0r54h")
position = Vector2(72, 136)
texture = ExtResource("2_yqpy3")
hframes = 16
vframes = 16
frame = 16
script = ExtResource("5_4oqxp")

[node name="WallDirCast" parent="Knight" instance=ExtResource("5_ic3ku")]
visible = false
right_length = 256
down_length = 256
left_length = 256
up_length = 256
collision_mask = 2

[node name="PGlowDirCast" parent="Knight" instance=ExtResource("5_ic3ku")]
visible = false
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="PlayerCheckArea" type="Area2D" parent="Knight"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knight/PlayerCheckArea"]
shape = SubResource("RectangleShape2D_fbqlq")
